JRADEV-16427: added jira3 instance which was missing