@@ -184,6 +184,37 @@
                                 </pluginArtifact>
                             </pluginArtifacts>
                         </product>
+						<product>
+							<id>jira</id>
+							<instanceId>jira3</instanceId>
+							<version>${jira.version}</version>
+							<httpPort>2992</httpPort>
+							<jvmDebugPort>5004</jvmDebugPort>
+							<dataPath>${project.basedir}/src/test/amps/jira3-generated-test-resources.zip</dataPath>
+							<jvmArgs>-Xmx768m -XX:MaxPermSize=300m -Datlassian.slomo=133 -Dplugin.webresource.batching.off=false</jvmArgs>
+							<pluginArtifacts>
+								<pluginArtifact>
+									<groupId>com.atlassian.cpji</groupId>
+									<artifactId>cpji-jira-plugin</artifactId>
+									<version>${project.version}</version>
+								</pluginArtifact>
+								<pluginArtifact>
+									<groupId>com.atlassian.jira.tests</groupId>
+									<artifactId>jira-testkit-plugin</artifactId>
+									<version>${testkit.version}</version>
+								</pluginArtifact>
+								<pluginArtifact>
+									<groupId>com.atlassian.jira</groupId>
+									<artifactId>jira-func-test-plugin</artifactId>
+									<version>${jira.version}</version>
+								</pluginArtifact>
+								<pluginArtifact>
+									<groupId>com.atlassian.aui</groupId>
+									<artifactId>aui-qunit-plugin</artifactId>
+									<version>${aui.qunit.version}</version>
+								</pluginArtifact>
+							</pluginArtifacts>
+						</product>
                     </products>
                     <testGroups>
                         <testGroup>
